homework-lapeevvd/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-arch-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-microservices-arch-service
        protocol: HTTP
      hosts:
        - "*"
