homework-lapeevvd/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-arch-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - microservices-arch-gateway
  http:
    - match:
        - uri:
            regex: /*
      route:
        - destination:
            host: microservices-arch-service
            subset: v1
          weight: 50
        - destination:
            host: microservices-arch-service
            subset: v2
          weight: 50
